<?xml version="1.0" encoding="UTF-8"?>
<!--

 Copyright 2012-2017 Red Hat, Inc.

 This file is part of Thermostat.

 Thermostat is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published
 by the Free Software Foundation; either version 2, or (at your
 option) any later version.

 Thermostat is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with Thermostat; see the file COPYING.  If not see
 <http://www.gnu.org/licenses/>.

 Linking this code with other modules is making a combined work
 based on this code.  Thus, the terms and conditions of the GNU
 General Public License cover the whole combination.

 As a special exception, the copyright holders of this code give
 you permission to link this code with independent modules to
 produce an executable, regardless of the license terms of these
 independent modules, and to copy and distribute the resulting
 executable under terms of your choice, provided that you also
 meet, for each linked independent module, the terms and conditions
 of the license of that module.  An independent module is a module
 which is not derived from or based on this code.  If you modify
 this code, you may extend this exception to your version of the
 library, but you are not obligated to do so.  If you do not wish
 to do so, delete this exception statement from your version.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.redhat.thermostat</groupId>
    <artifactId>thermostat-web-gateway</artifactId>
    <packaging>pom</packaging>
    <version>1.99.12-SNAPSHOT</version>

    <name>Thermostat Web Gateway</name>

    <modules>
        <module>server</module>
        <module>distribution</module>
        <module>common</module>
        <module>config-assembly</module>
        <module>services</module>
        <module>ide-launcher</module>
        <module>tests</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.7</java.version>
        <jersey.version>2.25</jersey.version>
        <jetty.version>9.2.19.v20160908</jetty.version>
        <mongo-java-driver.version>3.2.1</mongo-java-driver.version>
        <!-- Jetty needs 3.1+ servlet API for HttpSessionIdListener -->
        <javax.servlet.version>3.1.0</javax.servlet.version>
        <javax-rs-api.version>2.0.1</javax-rs-api.version>

        <keycloak.version>3.2.0.Final</keycloak.version>

        <junit.version>4.12</junit.version>
        <mockito-core.version>2.7.11</mockito-core.version>
        <google-gson.version>2.3.1</google-gson.version>

        <license.skip>false</license.skip>

        <maven.itest.skip>false</maven.itest.skip>

        <!-- Intentionally empty. See java-7 profile -->
        <surefire.argline></surefire.argline>
    </properties>

    <profiles>
        <profile>
            <id>java-7</id>
            <activation>
                <jdk>1.7</jdk>
            </activation>
            <properties>
                <surefire.argline>-XX:-UseSplitVerifier -XX:MaxPermSize=256m</surefire.argline>
            </properties>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.1</version>
                    <configuration>
                        <fork>true</fork>
                        <meminitial>128m</meminitial>
                        <maxmem>1024m</maxmem>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20</version>
                    <configuration>
                        <argLine>${surefire.argline}</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.6</version>
                <inherited>false</inherited>
                <configuration>
                    <skip>${license.skip}</skip>
                    <headerDefinitions>
                        <headerDefinition>buildfiles/license-check/thermostat-java.xml</headerDefinition>
                        <headerDefinition>buildfiles/license-check/thermostat-xml.xml</headerDefinition>
                    </headerDefinitions>
                    <aggregate>true</aggregate>
                    <mapping>
                        <java>THERMOSTAT_JAVA_STYLE</java>
                        <xml>THERMOSTAT_XML_STYLE</xml>
                        <sh>SCRIPT_STYLE</sh>
                    </mapping>
                    <header>buildfiles/license-check/header.txt</header>
                    <properties>
                        <inceptionYear>${project.inceptionYear}</inceptionYear>
                    </properties>
                    <includes>
                        <include>**/*.java</include>
                        <include>**/*.xml</include>
                        <include>**/*.sh</include>
                    </includes>
                    <excludes>
                        <exclude>**/src/test/resources/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>check-license</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
